# gnss-sdr

src/algorithms/: CMakeLists.txt
src/algorithms/NMA/: CMakeLists.txt
src/algorithms/NMA/adapters/: CMakeLists.txt  galileo_open_service_navigation_message_authentication.cc  galileo_open_service_navigation_message_authentication.h
src/algorithms/NMA/gnu_radio_blocks/: CMakeLists.txt  galileo_open_service_navigation_message_authentication_gs.cc  galileo_open_service_navigation_message_authentication_gs.h
src/core/interfaces/: navigation_message_authentication_interface.h
